--- a/web/templates/tecnicos/nomina_cali.html
+++ b/web/templates/tecnicos/nomina_cali.html
@@ -34,6 +34,14 @@
     <div class="filters-card">
         <form method="get" class="filters-compact" id="filtrosForm">
             <div class="form-group">
+                <label for="ubicacion" class="form-label">Ubicación</label>
+                <select name="ubicacion" id="ubicacion" class="form-select" onchange="this.form.submit()">
+                    <option value="CALI" {% if filtros.ubicacion == 'CALI' %}selected{% endif %}>Cali</option>
+                    <option value="YUMBO" {% if filtros.ubicacion == 'YUMBO' %}selected{% endif %}>Yumbo</option>
+                </select>
+            </div>
+
+            <div class="form-group">
                 <label for="mes" class="form-label">Mes</label>
                 <select name="mes" id="mes" class="form-select" onchange="this.form.submit()">
                     {% for m_val, m_nom in meses %}
