--- a/web/templates/tecnicos/nomina_cali.html
+++ b/web/templates/tecnicos/nomina_cali.html
@@ -102,6 +102,9 @@
             {% if novedades_nomina %}
                 {% for nov in novedades_nomina %}
                 <div class="novedad-card" data-nombre="{{ nov.nombre }}">
+                    {% if nov.horario_sede %}
+                        <div class="novedad-card__horario-top" title="Horario Sede">🏫 {{ nov.horario_sede }}</div>
+                    {% endif %}
                     <div class="novedad-card__nombre">{{ nov.nombre }}</div>
                     <div class="novedad-card__sede">📍 {{ nov.descripcion_proyecto }}</div>
                     <div class="novedad-card__detalle">
@@ -213,6 +216,9 @@
             {% if novedades_cali %}
                 {% for nov in novedades_cali %}
                 <div class="novedad-card novedad-card--appsheet" data-nombre="{{ nov.nombre }}">
+                    {% if nov.horario_sede %}
+                        <div class="novedad-card__horario-top" title="Horario Sede">🏫 {{ nov.horario_sede }}</div>
+                    {% endif %}
                     <div class="novedad-card__nombre">{{ nov.nombre }}</div>
                     <div class="novedad-card__sede">📍 {{ nov.sede }}</div>
                     <div class="novedad-card__detalle">
